--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
 		"react-native-reanimated": "~1.1.0",
 		"react-native-web": "^0.11.4",
 		"react-navigation": "^3.12.1",
-		"react-navigation-tabs": "^2.3.0"
+		"react-navigation-tabs": "^2.3.0",
+		"react-redux": "^7.1.1",
+		"redux": "^4.0.4"
 	},
 	"devDependencies": {
 		"babel-preset-expo": "^6.0.0"
