--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
 		"react": "16.8.3",
 		"react-dom": "^16.8.6",
 		"react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
-		"react-native-elements": "^1.1.0",
 		"react-native-calendars": "^1.212.0",
+		"react-native-elements": "^1.1.0",
 		"react-native-gesture-handler": "~1.3.0",
 		"react-native-keyboard-aware-scroll-view": "^0.9.1",
 		"react-native-reanimated": "~1.1.0",
@@ -21,7 +21,9 @@
 		"react-navigation": "^3.12.1",
 		"react-navigation-tabs": "^2.3.0",
 		"react-redux": "^7.1.1",
-		"redux": "^4.0.4"
+		"redux": "^4.0.4",
+		"redux-logger": "^3.0.6",
+		"redux-thunk": "^2.3.0"
 	},
 	"devDependencies": {
 		"babel-preset-expo": "^6.0.0"
