--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
 		"react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
 		"react-native-calendars": "^1.212.0",
 		"react-native-elements": "^1.1.0",
+		"react-native-floating-action": "^1.19.1",
 		"react-native-gesture-handler": "~1.3.0",
 		"react-native-keyboard-aware-scroll-view": "^0.9.1",
-		"react-native-reanimated": "~1.1.0",
 		"react-native-web": "^0.11.4",
 		"react-navigation": "^3.12.1",
 		"react-navigation-tabs": "^2.3.0",
