--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	},
 	"dependencies": {
 		"expo": "^34.0.1",
+		"expo-font": "^6.0.1",
 		"react": "16.8.3",
 		"react-dom": "^16.8.6",
 		"react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
@@ -17,6 +18,7 @@
 		"react-native-floating-action": "^1.19.1",
 		"react-native-gesture-handler": "~1.3.0",
 		"react-native-keyboard-aware-scroll-view": "^0.9.1",
+		"react-native-vector-icons": "^6.6.0",
 		"react-native-web": "^0.11.4",
 		"react-navigation": "^3.12.1",
 		"react-navigation-tabs": "^2.3.0",
