--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 		"react-native-floating-action": "^1.19.1",
 		"react-native-gesture-handler": "~1.3.0",
 		"react-native-keyboard-aware-scroll-view": "^0.9.1",
+		"react-native-modal-datetime-picker": "^7.5.0",
+		"react-native-reanimated": "^1.2.0",
 		"react-native-vector-icons": "^6.6.0",
 		"react-native-web": "^0.11.4",
 		"react-navigation": "^3.12.1",
