--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"expo": "^34.0.1",
 		"expo-font": "^6.0.1",
 		"expo-image-picker": "^6.0.0",
+		"firebase": "^6.6.0",
 		"react": "16.8.3",
 		"react-dom": "^16.8.6",
 		"react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
